<resources>
    <string name="app_name">Combustivel Management</string>

    <!-- Buttons - General -->
    <string name="btn_save">Salvar</string>
    <string name="btn_vehicle_data">Dados do veículo</string>

    <!-- Home screen information -->
    <string name="title_activity_main">CombustivelManagement</string>
    <string name="main_title_values">Resumo</string>
    <string name="main_average_consumption">Média de consumo (Km/l)</string>
    <string name="main_spending">Total de gastos (R$)</string>
    <string name="main_remaining_volume">Volume restante (Litros)</string>
    <string name="main_approximate_autonomy">Autonomia aprox. (Km)</string>
    <string name="main_no_value">0,0</string>

    <!-- Menu -->
    <string name="menu_title">Manu de funcionalidades</string>
    <string name="menu_home">Principal</string>
    <string name="menu_system">Sistema</string>
    <string name="menu_about">Sobre</string>
    
    <!-- Average Consumption -->
    <string name="average_consumption_list_title">Médias de consumo</string>
    <string name="average_consumption_list_general_average">Média geral de consumo</string>

    <!-- Average consumption new -->
    <string name="average_consumption_new_title">Nova média</string>
    <string name="average_consumption_date">Data</string>
    <string name="average_consumption_amount_liters">Quantidade de Litros</string>
    <string name="average_consumption_price_by_liter">Preço/Litro</string>
    <string name="average_consumption_kilometer">Quilometros rodados</string>
    <string name="average_consumption_km_per_liter">Km/l</string>

    <!-- Navigation History -->
    <string name="navigation_history_title">Histórico de navegações</string>
    <string name="navigation_history_new_date">Data</string>
    <string name="navigation_history_new_distance">Distância percorrida</string>

    <!-- Vehicle Data -->
    <string name="vehicle_data_title">Dados do veículo</string>
    <string name="vehicle_data_vehicle_manufacturer">Marca</string>
    <string name="vehicle_data_vehicle_model">Modelo</string>
    <string name="vehicle_data_vehicle_year">Ano</string>
    <string name="vehicle_data_fuel_capacity">Capacidade do tanque</string>

    <!-- About -->
    <string name="about_title">Sobre</string>
    <string name="about_author">Hallison Oliveira</string>
    <string name="about_description">Aplicativo voltado para o controle de gastos e consumo de combustível do seu veículo</string>
    <string name="about_observation">Aplicativo desenvolvido como projeto final durante o Android Study Jams 2016 promovido pelo Google Developer Group Curitiba (GDG Curitiba)</string>


    <!-- Dialog -->
    <string name="dialog_exit_question">Deseja sair?</string>
    <string name="dialog_exit_yes">Sim</string>
    <string name="dialog_exit_no">Não</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>



    <!-- Novo formato de string - Todas as strings segirão esse padrão e serão alteradas de acordo com a necessidade -->

    <!-- Gerais -->
    <!-- Titulos -->
    <string name="all_vehicle_data">Dados do veículo</string>
    <string name="all_navigation_history">Histórico de navegações</string>
    <string name="all_average_consumption">Médias de consumo</string>

    <string name="all_date">Data</string>

    <!-- Dados do veículo -->
    <string name="vehicledata_manufacturer">Marca</string>
    <string name="vehicledata_model">Modelo</string>
    <string name="vehicledata_year">Ano</string>
    <string name="vehicledata_fuel_capacity">Capacidade do tanque</string>

    <!-- Mensagens -->
    <!-- Erros -->
    <string name="error_required_field">Campo obrigatório!</string>
    <string name="error_vehicle_data_required">Você deve preencher o cadastro do veículo antes
        de utilizar as funcionalidades do aplicativo</string>
    <string name="error_vehicle_not_saved">Houve um erro ao salvar os dados do veículo.</string>
    <string name="error_find_vehicle_data">Houve um erro ao buscar os dados do veículo.</string>
    <string name="error_fill_vehicle_tank">Houve um erro ao completar o tanque do veículo.</string>
    <string name="error_navigation_history_not_saved">Houve um erro ao salvar os dados.</string>
    <string name="error_average_consumption_not_saved">Houve um erro ao salvar os dados.</string>

    <!-- Info -->
    <string name="info_vehicle_saved">Veículo salvo com sucesso!</string>
    <string name="info_vehicle_data_empty">Nenhum veículo cadastrado.</string>
    <string name="info_average_consumption_saved">Média de consumo cadastrada com sucesso!</string>
    <string name="info_navigation_history_saved">Histórico de navegação cadastrado com sucesso!</string>
    <string name="info_navigation_history_not_saved">Houve um erro ao salvar os dados.</string>


</resources>
