<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />

        <!--item
            android:id="@+id/nav_navigation"
            android:icon="@drawable/ic_navigation_black_24dp"
            android:title="@string/navigation_title" /-->

        <item
            android:id="@+id/nav_navigation_history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/navigation_history_title" />

        <!--item
            android:id="@+id/nav_graphics"
            android:icon="@drawable/ic_show_chart_black_24dp"
            android:title="@string/graphics_title" /-->

        <item
            android:id="@+id/nav_average_consumption"
            android:icon="@drawable/ic_local_gas_station_black_24dp"
            android:title="@string/average_consumption_list_title" />

        <item
            android:id="@+id/nav_vehicleData"
            android:icon="@drawable/ic_directions_car_black_24dp"
            android:title="@string/vehicle_data_title" />
    </group>

    <item android:title="@string/menu_system">

        <menu>
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_menu_manage"
                    android:title="@string/menu_about" />

            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="Sair" />
        </menu>
    </item>

</menu>
