<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tbr_about"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">


        <ImageView
            android:id="@+id/img_about"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginBottom="24dp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/txv_about_app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_about"
            android:textAlignment="center"
            android:textSize="28sp"
            style="@style/style_screen_titles"
            android:text="@string/app_name"/>

        <TextView
            android:id="@+id/txv_about_author_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txv_about_app_name"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="16dp"
            android:text="@string/about_author"/>

        <TextView
            android:id="@+id/txv_about_app_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txv_about_author_name"
            android:textAlignment="center"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"
            android:text="@string/about_description"/>

        <TextView
            android:id="@+id/txv_about_observation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="italic"
            android:layout_alignParentBottom="true"
            android:text="@string/about_observation"/>

    </RelativeLayout>

</LinearLayout>
