<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.VehicleDataActivity"
    tools:showIn="@layout/activity_vehicle_data">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/imageview_vehicledata_vehicleimage"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vehicledata_manufacturer"
            />

        <EditText
            android:id="@+id/edittext_vehicledata_manufacturer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            style="@style/all_edittext"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vehicledata_model"
            />

        <EditText
            android:id="@+id/edittext_vehicledata_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            style="@style/all_edittext"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vehicledata_year"
            />


        <EditText
            android:id="@+id/edittext_vehicledata_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vehicledata_fuel_capacity"
            />

        <EditText
            android:id="@+id/edittext_vehicledata_fuelcapacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="4"
            style="@style/all_edittext"
            />
    </LinearLayout>

</LinearLayout>
